--- a/EME/wwwroot/css/site.css
+++ b/EME/wwwroot/css/site.css
@@ -3,11 +3,44 @@ body {
     padding-bottom: 20px;
 }
 
+html, body, .body-content, #MasterCarousel, .carousel-inner, .carousel-item {
+    min-height: 100%;
+    height: 100%;
+}
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.eme-red {
+    background-color: #D33E43;
+}
+
+.eme-white {
+    background-color: #EEE0CB;
+}
+
+.eme-black {
+    background-color: #02111B;
+}
+
+.eme-black-text {
+    color: #02111B;
+}
+
+.dropzone .dz-preview .dz-progress {
+    display: none;
+}
+
+.absolute-center {
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
 }
 
 /* Carousel */
