Did a bunch of stuff

--- a/EME/Pages/_Layout.cshtml
+++ b/EME/Pages/_Layout.cshtml
@@ -10,12 +10,15 @@
         <link rel="stylesheet" href="~/css/basic.css" />
         <link rel="stylesheet" href="~/css/dropzone.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/aos.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </environment>
     <environment include="Development">
         <script src="~/js/jquery-3.3.1.js"></script>
         <script src="~/js/bootstrap.js"></script>
         <script src="~/js/particles.js"></script>
         <script src="~/js/dropzone.js"></script>
+        <script src="~/js/aos.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
 </head>
