--- a/EME/Pages/_Layout.cshtml
+++ b/EME/Pages/_Layout.cshtml
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="~/css/dropzone.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/aos.css" />
+        <link rel="stylesheet" href="~/css/jquery-confirm.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </environment>
     <environment include="Development">
@@ -19,6 +20,7 @@
         <script src="~/js/particles.js"></script>
         <script src="~/js/dropzone.js"></script>
         <script src="~/js/aos.js"></script>
+        <script src="~/js/jquery-confirm.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
 </head>
